[gd_scene load_steps=29 format=3 uid="uid://bryybme68tf54"]

[ext_resource type="Script" path="res://modules/corentin/menu.gd" id="1_hhpha"]
[ext_resource type="PackedScene" uid="uid://buwh6h4m35fa" path="res://modules/corentin/dungeon.tscn" id="2_t6ukj"]
[ext_resource type="Texture2D" uid="uid://d148gudwffotu" path="res://modules/remi/assets/graphics/door_back.svg" id="3_36w7x"]
[ext_resource type="Texture2D" uid="uid://7ddkleeb5xoc" path="res://modules/remi/assets/graphics/door_normal.svg" id="3_j33qr"]
[ext_resource type="Script" path="res://modules/corentin/SoundBar.gd" id="4_ed80u"]
[ext_resource type="Texture2D" uid="uid://ojk67cqy720d" path="res://modules/remi/assets/graphics/settings_music_symbol_normal.svg" id="4_iuaxr"]
[ext_resource type="Texture2D" uid="uid://dkma5iok6qmc0" path="res://modules/remi/assets/graphics/door_hover.svg" id="4_un7k2"]
[ext_resource type="Texture2D" uid="uid://bwewvdccvi2d2" path="res://modules/remi/assets/graphics/door_pressed.svg" id="5_47o6l"]
[ext_resource type="Texture2D" uid="uid://c12o8cc1e654" path="res://modules/remi/assets/graphics/settings_easy_normal.svg" id="6_x55tw"]
[ext_resource type="Texture2D" uid="uid://cmjxtknf2hip6" path="res://modules/remi/assets/graphics/settings_easy_pressed.svg" id="7_baeed"]
[ext_resource type="Texture2D" uid="uid://ckiqfdwyuv4l8" path="res://modules/remi/assets/graphics/settings_danger_level_normal.svg" id="7_cj3f0"]
[ext_resource type="Texture2D" uid="uid://dwwfa0ihik6on" path="res://modules/remi/assets/graphics/settings_exit_normal.svg" id="7_etbpj"]
[ext_resource type="Texture2D" uid="uid://ucrlb4qtjyxv" path="res://modules/remi/assets/graphics/settings_exit_pressed.svg" id="8_3u8pe"]
[ext_resource type="Texture2D" uid="uid://bn83vgc25a1hb" path="res://modules/remi/assets/graphics/settings_easy_hover.svg" id="8_c2mcx"]
[ext_resource type="Texture2D" uid="uid://ciigh8ejfgfe6" path="res://modules/remi/assets/graphics/settings_exit_hover.svg" id="9_3g4gl"]
[ext_resource type="Texture2D" uid="uid://b1kwyynxal2sl" path="res://modules/remi/assets/graphics/settings_normal_normal.svg" id="11_4bwyv"]
[ext_resource type="Texture2D" uid="uid://ct732owo0nr4p" path="res://modules/remi/assets/graphics/settings_normal_pressed.svg" id="12_f3o5e"]
[ext_resource type="Texture2D" uid="uid://cxlhqj2es27g3" path="res://modules/remi/assets/graphics/settings_border.svg" id="12_r0aal"]
[ext_resource type="Texture2D" uid="uid://k1fdoyuspwc0" path="res://modules/remi/assets/graphics/settings_normal_hover.svg" id="13_1f0wd"]
[ext_resource type="Texture2D" uid="uid://doafc5ysf1olk" path="res://modules/remi/assets/graphics/settings_hard_normal.svg" id="14_raq3u"]
[ext_resource type="Texture2D" uid="uid://uo6lmpwx42v7" path="res://modules/remi/assets/graphics/settings_hard_pressed.svg" id="15_j2xpy"]
[ext_resource type="Texture2D" uid="uid://chv0uhvhq2m5f" path="res://modules/remi/assets/graphics/settings_hard_hover.svg" id="16_ecdlm"]
[ext_resource type="Texture2D" uid="uid://cyd4fllsiutm1" path="res://modules/remi/assets/graphics/overlay.svg" id="23_tg46e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v4n5c"]
bg_color = Color(0.48, 0.8, 0.634667, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.670588, 0.929412, 0.8, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8bu1r"]
bg_color = Color(0.72, 0.9, 0.807, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.670588, 0.929412, 0.8, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_buqgf"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.670726, 0.929641, 0.800183, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 6
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rsdtq"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.8075, 0.95, 0.87875, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 6
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tbyhs"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.901961, 0.94902, 0.92549, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 6
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[node name="Menu" type="Node"]
script = ExtResource("1_hhpha")
dungeon = ExtResource("2_t6ukj")

[node name="DungeonContainer" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Black" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.8)

[node name="Start" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Start"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1212.0
offset_top = -687.0
offset_right = 1212.0
offset_bottom = 687.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_36w7x")

[node name="StartButton" type="TextureButton" parent="CanvasLayer/Start"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -573.0
offset_top = -459.5
offset_right = 573.0
offset_bottom = 459.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_j33qr")
texture_pressed = ExtResource("5_47o6l")
texture_hover = ExtResource("4_un7k2")
texture_disabled = ExtResource("5_47o6l")
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Start"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1214.0
offset_top = -772.0
offset_right = 1243.0
offset_bottom = 812.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("23_tg46e")

[node name="Settings" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 33.0
offset_top = -393.0
offset_right = 948.0
offset_bottom = 321.0
grow_vertical = 0
scale = Vector2(0.5, 0.5)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Settings"]
layout_mode = 2
offset_top = 231.0
offset_right = 915.0
offset_bottom = 714.0
texture = ExtResource("12_r0aal")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings"]
layout_mode = 0
offset_left = 100.0
offset_top = 418.0
offset_right = 893.0
offset_bottom = 662.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Settings/VBoxContainer"]
layout_mode = 2

[node name="Sound" type="HBoxContainer" parent="CanvasLayer/Settings/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Settings/VBoxContainer/HBoxContainer/Sound"]
layout_mode = 2
texture = ExtResource("4_iuaxr")
stretch_mode = 3

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Settings/VBoxContainer/HBoxContainer/Sound"]
custom_minimum_size = Vector2(400, 140)
layout_mode = 2

[node name="SoundBar" type="HScrollBar" parent="CanvasLayer/Settings/VBoxContainer/HBoxContainer/Sound/CenterContainer"]
custom_minimum_size = Vector2(340, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/scroll = SubResource("StyleBoxFlat_v4n5c")
theme_override_styles/scroll_focus = SubResource("StyleBoxFlat_8bu1r")
theme_override_styles/grabber = SubResource("StyleBoxFlat_buqgf")
theme_override_styles/grabber_highlight = SubResource("StyleBoxFlat_rsdtq")
theme_override_styles/grabber_pressed = SubResource("StyleBoxFlat_tbyhs")
value = 100.0
rounded = true
script = ExtResource("4_ed80u")

[node name="Exit" type="TextureButton" parent="CanvasLayer/Settings/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
texture_normal = ExtResource("7_etbpj")
texture_pressed = ExtResource("8_3u8pe")
texture_hover = ExtResource("9_3g4gl")
stretch_mode = 5

[node name="Difficulty" type="HBoxContainer" parent="CanvasLayer/Settings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Settings/VBoxContainer/Difficulty"]
layout_mode = 2
texture = ExtResource("7_cj3f0")
stretch_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Settings/VBoxContainer/Difficulty"]
layout_mode = 2
size_flags_vertical = 3

[node name="Easy" type="TextureButton" parent="CanvasLayer/Settings/VBoxContainer/Difficulty/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("6_x55tw")
texture_pressed = ExtResource("7_baeed")
texture_hover = ExtResource("8_c2mcx")
texture_disabled = ExtResource("7_baeed")
stretch_mode = 3

[node name="Medium" type="TextureButton" parent="CanvasLayer/Settings/VBoxContainer/Difficulty/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("11_4bwyv")
texture_pressed = ExtResource("12_f3o5e")
texture_hover = ExtResource("13_1f0wd")
texture_disabled = ExtResource("12_f3o5e")
stretch_mode = 5

[node name="Hard" type="TextureButton" parent="CanvasLayer/Settings/VBoxContainer/Difficulty/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("14_raq3u")
texture_pressed = ExtResource("15_j2xpy")
texture_hover = ExtResource("16_ecdlm")
texture_disabled = ExtResource("15_j2xpy")
stretch_mode = 5

[connection signal="button_up" from="CanvasLayer/Start/StartButton" to="." method="_on_texture_button_button_up"]
[connection signal="value_changed" from="CanvasLayer/Settings/VBoxContainer/HBoxContainer/Sound/CenterContainer/SoundBar" to="CanvasLayer/Settings/VBoxContainer/HBoxContainer/Sound/CenterContainer/SoundBar" method="_on_value_changed"]
[connection signal="button_up" from="CanvasLayer/Settings/VBoxContainer/HBoxContainer/Exit" to="." method="_on_exit_button_up"]
[connection signal="button_down" from="CanvasLayer/Settings/VBoxContainer/Difficulty/HBoxContainer/Easy" to="." method="_on_easy_button_down"]
[connection signal="button_down" from="CanvasLayer/Settings/VBoxContainer/Difficulty/HBoxContainer/Medium" to="." method="_on_medium_button_down"]
[connection signal="button_down" from="CanvasLayer/Settings/VBoxContainer/Difficulty/HBoxContainer/Hard" to="." method="_on_hard_button_down"]
